--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "keep-react": "^1.2.0",
+    "phosphor-react": "^1.4.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "surge": "^0.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
